2011-04-08 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList): Install *.sh, *.pl,
	*.py under /usr/bin by default. SuImplyfy mode 755 detection for
	all files matching */bin/* in their path.

2011-04-07 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (OPTIONAL EXTERNAL FILES::install.lst).
	Improve documentation. Add $DOC, add *.1 manual files examples.

	* bin/template/install.lst.ex: Add more examples.

	* bin/cygbuild.sh (CygbuildCmdInstallList): Add $DOC susbtitution
	variable support in install.lst Default file install mode is now
	644. All */bin* files are 755 by default.

	* bin/cygbuild.sh (CygbuildInstallExtraManual): Correct reading
	patch to manual page from CYGWIN-PATCHES/install.lst

2011-04-07 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCommandMainCheckSpecial): In ls-patch
	command, define DIR_CYGPATCH which is needed in
	CygbuildPatchFileQuilt(), called from CygbuildPatchFileList().

2011-03-28 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (top level::Cancel any environment settings):
	Correct unlalias to unalias. Thanks to Ken Jackson
	<ken@jackson.io>.

2011-03-17 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList):
	FROM files that end to a number, like program.1, automatically
	determine TO part. This allows installing manual pages without
	specifying the destination path in CYGWIN-PATCHES/install.lst file.

2011-02-11 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Call
	CygbuildCmdInstallListExists().
	(CygbuildCmdInstallListExists): New.
	(CygbuildCmdInstallList): Check common files like *.conf
	and adjust mode accordingly.

2011-02-11 Fri  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (HELP::install.lst): Fix typos.

	* bin/cygbuild.sh (CygbuildInstallExtraManual): Suport POD manual
	pages in separate directories.
	(CygbuildCmdInstallList): Compress */man/* files.
