@@ -1,6 +1,10 @@
 2011-04-08 Fri  Jari Aalto  <jari.aalto@cante.net>
 
-	* bin/cygbuild.sh (CygbuildCmdInstallList): Install *.sh, *.pl,
+	* bin/cygbuild.sh
+	(top level): Fix typos in coments.
+	(CygbuildCmdInstallList): Install *.sh, *.pl,
+	(CygbuildTarOptionCompress): Add LZMA support.
+
 	*.py under /usr/bin by default. SuImplyfy mode 755 detection for
 	all files matching */bin/* in their path.
 
